Contrast Light Mode fixed

--- a/style/style.css
+++ b/style/style.css
@@ -228,8 +228,18 @@ span {
     justify-content: space-between;
     margin-left: 30%;
     margin-right: 30%;
-    margin-top: 150px;
+    margin-top: 100px;
 }  
+
+.content-members-solo img {
+    filter: contrast(1);
+    border-radius: 200px;
+}
+
+.content-members-solo1 img {
+    filter: contrast(1);
+    border-radius: 200px;
+} 
 
 .content-members-solo1 {
     display: flex;
